--- a/Project/Frontend/HTMl/Resume.html
+++ b/Project/Frontend/HTMl/Resume.html
@@ -11,7 +11,7 @@
     <h3>Mobile No.: 9443487536</h3>
     <h3>Email : riteshkumaran2005@gmail.com</h3>
     <hr>
-    <h2><i>Education</i></h2>
+    <h2><i><u>Education</u></i></h2>
     <table border="1">
         <tr>
             <th>Secondary(X)</th>
@@ -24,7 +24,7 @@
             <td>8.07</td>
         </tr>
     </table><hr>
-    <h2><i>Career Objective</i></h2>
+    <h2><i><u>Career Objective</u></i></h2>
     <pre><h3>         To secure a challenging position in the field of computer science
          and engineering where I can apply my knowledge, enhance my technical 
          skills, and contribute to the growth of the organization while 
