--- a/Project/Frontend/HTMl/sec.html
+++ b/Project/Frontend/HTMl/sec.html
@@ -4,6 +4,7 @@
     </head>
     <body bgcolor="DarkGray">
         <h1 align="center"><i>Personal Details</i></h1>
+        <a href="fir.html" align="right"><i><h2>Back</h2></i></a>
         <table border="1" align="center">
             <tr>
                 <th>Name  </th>
