--- a/Project/Frontend/JS/password.html
+++ b/Project/Frontend/JS/password.html
@@ -8,21 +8,19 @@
 <body>
     <script>
         /* cmt line */
-        var un = "Ritesh";
-        var pass = 12345;
-        alert("Login");
-        console.log("Good Morning !");
-        var a = String(prompt("Enter First Element : "));
-        var b = Number(prompt("Enter Second Element : "));
-        if(un == a  && pass === b){
-            alert("Verified")
-            document.write("Logged In !")
+    //Age category check (if else-if else)
+    while(1){
+        var age = Number(prompt("Enter Age : "));
+        if(age>0 && age<18){
+            alert("Kid.")
+            }
+        else if(age<40 && age>=18){
+            alert("Adult.")
         }
         else{
-            alert("Incorrect.")
-            document.write("Incorrect Password or UserName")
-        }
-        
+            alert("Aged.")
+        } 
+    }     
     </script>
 </body>
 </html>
